<resources>
    <string name="app_name">BossQueue</string>
    <string name="search">Search</string>
    <string name="find_desired_place">Find your desired place</string>
    <string name="dont_have_any_account">don’t have any account?</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="Hi">Hi!</string>
    <string name="welcome_to_BOSSQUE">welcome to BOSSQUE</string>
    <string name="this_app_helping_you_to_bookin">this app helping you to book menu at your favorite restaurant, cafe. etc</string>
    <string name="input_your_data">input your data</string>
    <string name="this_app_helping_you_to_find">this app helping you to find and order menu on your favorite cafe</string>
    <string name="helping_you_to_avoid">helping you to avoid a long queue and make fast your book</string>
    <string name="finding_you_the_best">finding you the best option to enjoy your time and meals</string>
    <string name="find_your_place_order">Find Your Order Place</string>
    <string name="HOT_NOW">HOT NOW</string>
    <string name="NEAR_YOU">NEAR YOU</string>
    <string name="LAST_PLACE">LAST PLACE</string>
    <string name="My_Activity">My Activity</string>
    <string name="activities">Activities</string>
    <string name="history">History</string>
    <string name="menu">Menu</string>
    <string name="all">All</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="basket">Basket</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="place_name">Place Name</string>
    <string name="place_location">Place location</string>
    <string name="pending">pending</string>
    <string name="pay">pay</string>
    <string name="create">create</string>
    <string name="success">success</string>
    <string name="desc_app_name">App name</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="payment">Payment</string>
    <string name="description_place_image">Place image</string>
    <string name="description_orange_arrow">Orange arrow</string>
    <string name="remove">Remove</string>
    <string name="payment_method">Payment Method</string>
    <string name="gopay">GoPay</string>
    <string name="shopeepay">ShopeePay</string>
    <string name="mandiri_virtual_account">Mandiri Virtual Account</string>
    <string name="bni_virtual_account">BNI Virtual Account</string>
    <string name="permata_virtual_account">Permata Virtual Account</string>
    <string name="atm_bersama_other">ATM Bersama / Other</string>
    <string name="bca_virtual_account">BCA Virtual Account</string>
    <string name="ovo">OVO</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="pay_amount">Amount that you have to pay:</string>
    <string name="price">Rp25.000</string>
    <string name="description_zoom_icon">Zoom icon</string>
    <string name="description_back_icon">Back icon</string>
    <string name="descripton_search_icon">Search icon</string>
    <string name="description_place_container_gradient">Color gradient</string>
    <string name="name">Name</string>
    <string name="hint_name">John john</string>
    <string name="email">Email</string>
    <string name="hint_email">john@email.com</string>
    <string name="password">Password</string>
    <string name="hint_password">********</string>
    <string name="added_text">Added</string>
</resources>