<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/orange_1">

    <RelativeLayout
        android:id="@+id/layout_bossqueregister2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@id/layout_bossqueregister"
        android:layout_marginLeft="-100dp"
        android:layout_marginTop="-385dp"
        android:layout_marginRight="-100dp"
        android:background="@drawable/oval_layout_login2" />

    <RelativeLayout
        android:id="@+id/layout_bossqueregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_2">

        <ImageView
            android:id="@+id/img_register1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:src="@drawable/img_register1" />

        <RelativeLayout
            android:id="@+id/layout_btn_back"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rectangle_layout_back" >

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_arrow_kiri_putih" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/img_bossque"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_bossqueue_white" />

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_bossque"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:gravity="center"
            android:text="@string/this_app_helping_you_to_find"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/img_bulet1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_bulet1" />

        <TextView
            android:id="@+id/tv_inputdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_register1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-25dp"
            android:text="@string/input_your_data"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_below="@id/tv_inputdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/name"
            android:textColor="@color/white_2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_below="@id/tv_name"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rectangle_editteks_register"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:padding="8dp"
            android:autofillHints="John john"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_below="@id/et_name"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/white_2"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_below="@id/tv_email"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rectangle_editteks_register"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:autofillHints="john@email.com"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_below="@id/et_email"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/white_2"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_below="@id/tv_password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rectangle_editteks_register"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:autofillHints="********"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/layout_bossqueregister2"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_background"
        android:text="@string/create"
        android:textColor="@color/orange_1"
        app:backgroundTint="@color/brown_1"
        tools:ignore="TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

</RelativeLayout>