<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_menu"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_1"
    tools:context=".view.MenuActivity">

    <RelativeLayout
        android:id="@+id/layout_img_menu"
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <ImageView
            android:id="@+id/img_place"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/img_tes"
            android:contentDescription="@string/description_place_image"/>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/gradient_black"
            android:contentDescription="@string/description_place_image"/>

        <RelativeLayout
            android:id="@+id/layout_btn_back"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rectangle_layout_back" >

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/description_back_icon"
                android:src="@drawable/icon_arrow_kiri_putih" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_place_name"
            android:text="@string/place_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/layout_btn_zoom"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_white_background">

            <ImageView
                android:id="@+id/icon_zoom"
                android:src="@drawable/ic_zoom"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_zoom_icon"/>

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv_menu2"
        android:layout_below="@id/layout_img_menu"
        android:layout_above="@id/layout_basket"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layout_menu"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_layout_myactivity">

                <TextView
                    android:id="@+id/tv_menu"
                    android:text="@string/menu"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_food2"
                android:layout_below="@id/layout_menu"
                android:text="@string/food"
                android:textColor="@color/brown_2"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_food2"
                android:layout_below="@id/tv_food2"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_card_food"/>

            <TextView
                android:id="@+id/tv_drink2"
                android:layout_below="@id/rv_food2"
                android:text="@string/drink"
                android:textColor="@color/brown_2"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_drink2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_drink2"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_card_food" />

        </RelativeLayout>

    </ScrollView>
    
    <RelativeLayout
        android:id="@+id/layout_basket"
        android:layout_alignParentBottom="true"
        android:elevation="5dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="130dp"
        android:layout_height="28dp"
        android:background="@drawable/rectangle_layout_menulist">

        <TextView
            android:id="@+id/tv_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="5dp"
            android:text="@string/basket"
            android:textColor="@color/white"
            app:drawableLeftCompat="@drawable/ic_basket" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>