<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_1">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        tools:ignore="SpeakableTextPresentCheck">

        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/img_place"
                    android:src="@color/teal_200"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/description_place_image" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_image"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/place_name"
                android:textColor="@color/orange_2"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_place_location"
                android:layout_below="@id/tv_place_name"
                android:text="@string/place_location"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/layout_details"
                android:layout_below="@id/tv_place_location"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rectangle_layout_details"
                android:layout_marginBottom="5dp"
                android:layout_width="110dp"
                android:layout_height="20dp">

                <TextView
                    android:id="@+id/tv_details"
                    android:layout_centerInParent="true"
                    android:text="@string/details"
                    android:textSize="11sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:src="@drawable/icon_arrow_kanan_oren"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_orange_arrow" />

            </RelativeLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>