<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_1">

    <RelativeLayout
        android:id="@+id/layout_myactivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_layout_myactivity">

        <TextView
            android:id="@+id/tv_myactivity"
            android:text="@string/My_Activity"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_activities"
        android:layout_below="@id/layout_myactivity"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dr_search_box_white">

        <TextView
            android:id="@+id/tv_activities"
            android:text="@string/activities"
            android:textColor="@color/orange_1"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_history"
        android:layout_below="@id/layout_myactivity"
        android:layout_toRightOf="@id/layout_activities"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="27dp"
        android:text="@string/history"
        android:textColor="@color/orange_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_activities"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_card_activity" />
</RelativeLayout>